--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -77,21 +77,32 @@ a  {
     position: relative;
     .catch-copy {
         position: absolute;
-        top: 40%;
+        top: 30%;
         width: 100%;
+        padding: 10px;
         text-align: center;
-        color: var(--white);
+        color: var(--secondary);
         background-color: var(--dark);
+        @include media-breakpoint-down(xs) {
+            top: 20%;
+        }
     }
     .body-copy {
         position: absolute;
         bottom: 10%;
         width: 80%;
         margin-left: 10%;
+        padding: 10px;
         display: block;
         text-align: center;
-        color: var(--dark);
-        background-color: var(--muted);
+        color: var(--secondary);
+        background-color: var(--dark);
+        @include media-breakpoint-down(xs) {
+            position: relative;
+            top: 0;
+            width: 100%;
+            margin-left: 0;
+        }
     }
 }
 
